--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
   </head>
 
   <body>
-    <div class="container">
-      <div id="blocker">
-        <div id="instructions">
-          <span style="font-size: 36px">Click to play</span>
-          <br /><br />
-          Move: WASD<br />
-          Jump: SPACE<br />
-          Look: MOUSE
-        </div>
+    <div id="blocker">
+      <div id="instructions">
+        <span style="font-size: 36px">Click to play.</span>
+        <br />
+        Please use headphones to hear the spatialized sounds.
+        <br />
+        Move closer to the spheres to change the sounds. Jump them to change the
+        melody.
+        <br /><br />
+        Move: WASD<br />
+        Jump: SPACE<br />
+        Look: MOUSE
       </div>
     </div>
     <script src="src/index.js"></script>
